#43 | Fix new contrast issue, css selectors and heading order for accessibility

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,9 +1,9 @@
 :root {
-    --border-color: #0f477e;
+    --border-color: #0F477E;
     --links-color: #10508E;
     --circle: 150px;
-    --header-footer: #d2e4f7;
-    --background-color: #e8f1fb;
+    --header-footer: #D2E4F7;
+    --background-color: #E8F1FB;
     --content: #DDEBF9;
     --border-content: #D6E6F8;
 }
@@ -16,30 +16,31 @@ html {
 }
 .masthead, #site-nav, .page-title, .page__footer {
     background-color: var(--header-footer);
+    color: var(--links-color);
 }
 #main {
     margin: 0;
     padding: 0;
-}
-#main .feature__wrapper {
-    padding: 0 1em;
-    margin: 0 auto;
+    .feature__wrapper {
+        padding: 0 1em;
+        margin: 0 auto;
+    }
 }
 .page-title {
     margin-bottom: 2vw;
-}
-.page-title h1 {
-    margin: 2vw 0;
-    font-weight: 700;
+    h1 {
+        margin: 2vw 0;
+        font-weight: 700;
+    }
 }
 @media (min-width: 80em) {
     #main {
         max-width: none;
-    }
-    #main .feature__wrapper {
-        padding: 0 1em;
-        margin: 0 auto;
-        max-width: 1280px;
+        .feature__wrapper {
+            padding: 0 1em;
+            margin: 0 auto;
+            max-width: 1280px;
+        }
     }
 }
 .page__hero--overlay {
@@ -172,9 +173,9 @@ html {
     border: 1px solid black;
     border-radius: 1vw;
     opacity: 0.7;
-}
-#scroll-to-top:hover {
-    background-color: white;
+    &:hover {
+        background-color: white;
+    }
 }
   
 @media (min-width: 0em) { .feature__item--center { text-align: center; }}
